2004-11-13  Kouhei Sutou  <kou@cozmixng.org>

	* gnomeprintui: imported.
